fixed some edit user bugs

--- a/MyMovies/MyMovies/appsettings.json
+++ b/MyMovies/MyMovies/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyMovies": "Data Source=.\\SQLEXPRESS; Initial Catalog = MyMovies; Integrated Security = true"
+  }
 }
+  
